--- a/index.ipynb
+++ b/index.ipynb
@@ -9,7 +9,7 @@
     "### Objectives\n",
     "\n",
     "* Understand how `map` works in python for mapping a given function to each element of an iterable.\n",
-    "* Differentiate between map and filter functions and identify suitable uses cases for each"
+    "* Differentiate between map and filter functions and identify suitable uses for each"
    ]
   },
   {
